<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicioFragment"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/carritoFragment"
        android:title="@string/carrito"
        android:icon="@drawable/ic_carrito"/>

    <item
        android:id="@+id/buscarFragment"
        android:title="@string/buscar"
        android:icon="@drawable/ic_buscar"/>

    <item
        android:id="@+id/historialFragment"
        android:title="@string/historial"
        android:icon="@drawable/ic_carrito"/>

    <item
        android:id="@+id/perfilFragment"
        android:title="@string/perfil"
        android:icon="@drawable/ic_usuario"/>

</menu>