<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_regresar"
            app:title="Bienvenido!"
            app:titleTextColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/brother_dreams_regular"
            android:text="Acceder"
            android:textAllCaps="true"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Accede a tu cuenta de Muñecko Shop 🧸"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:paddingEnd="30dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/custom_color"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietCorreoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_correo"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/Color2"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                app:boxStrokeColor="@color/custom_color"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietContrasenaLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/Color2"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <Button
                android:id="@+id/btnOlvideContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:onClick="RestablecerPassActivity"
                android:text="@string/olvide_contrasena"
                android:textColor="@color/Color2"
                android:transitionName="transaccion_OlvidePass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O Inicia Sesion Con:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google"
                android:textColor="@color/black"
                android:transitionName="transaccion_OlvidePass" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/facebook"
                android:textColor="#3b5998"
                android:transitionName="transaccion_OlvidePass"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAccederCuentaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/acceder"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/crear_cuenta"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Color2" />

    </LinearLayout>

</ScrollView>