<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_regresar"
            app:title="Realizar Pedido"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/custom_color"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNombrePago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lapiz"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/Color2"
                    android:hint="@string/reg_nombres"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/custom_color"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDireccionPago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_direccion"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/Color2"
                    android:hint="@string/direccion"
                    android:inputType="textMultiLine"
                    android:maxLines="5"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_codigoCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/borde_color2"
                android:backgroundTint="@color/base_blancos"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/custom_color"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietCelularPago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_telefono"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/Color2"
                    android:hint="@string/reg_celular"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerMetodoPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Color2"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listViewConciertos"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTint="@color/verde"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textIsSelectable="true"
                    android:textSize="22sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMontoTotalPago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:drawableTint="@color/verde"
                    android:text="MX$550.00"
                    android:textAlignment="textEnd"
                    android:textIsSelectable="true"
                    android:textSize="22sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRealizarPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Color2"
                android:layout_marginTop="15dp"
                android:text="@string/realizar_pedido"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>