<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_regresar"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/tv_registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_registrate_bm"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="Registrate"
            android:textAllCaps="true"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_registrate_bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_numeros_regcuenta"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="Registrate En MuñeckoShop 🧸"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_usuario_imagen"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/logodos"
                app:civ_border_color="@color/Color2"
                app:civ_border_width="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/custom_color"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNombreSign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lapiz"
                    android:drawableTint="@color/Color2"
                    android:drawablePadding="5dp"
                    android:hint="@string/reg_nombres"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_codigoCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/borde_color2"
                android:backgroundTint="@color/base_blancos"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/custom_color"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietCelularSign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_telefono"
                    android:drawableTint="@color/Color2"
                    android:drawablePadding="5dp"
                    android:hint="@string/reg_celular"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/custom_color"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_correo"
                    android:drawableTint="@color/Color2"
                    android:hint=" Escribe tu correo electronico."
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/custom_color"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/Color2"
                app:startIconTint="@color/Color2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableTint="@color/Color2"
                    android:drawablePadding="5dp"
                    android:hint="Escribe tu contraseña."
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O Registrate Con:"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/google"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_google"
                android:transitionName="transaccion_OlvidePass" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/facebook"
                android:textColor="#3b5998"
                android:visibility="gone"
                android:drawableLeft="@drawable/ic_facebook"
                android:transitionName="transaccion_OlvidePass" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarCuentaSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/crear_cuenta"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnAccederCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/acceder_a_cuenta"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/Color2"
            android:transitionName="transicion_acceder_reg" />

    </LinearLayout>

</ScrollView>